# lemonc

./: $null  .gitignore  BACKUP_USAGE.md  BUILD_ERROR_FIX.md  BUILD_GUIDE.md  DEPS_FIX.md  GITHUB_BUILD_GUIDE.md  HYBRID_MODE.md  OPTIMIZATION.md  PACKAGING_RECOMMENDATIONS.md  QUICK_START_GUIDE.md  README_LEMONC.md  SETTINGS_IMPROVEMENTS.md  TAURI_BUILD.md  TAURI_BUILD_SUMMARY.md  TAURI_FEATURES.md  UPLOAD_GUIDE.md  VITE_FIX.md  check-build-status.sh  check-build.bat  check-build.sh  create_icons.py  fix-deps.bat  fix-start.bat  index.html  package-lock.json  package.json  setup-github-push.bat  setup-github-push.sh  vite.config.ts
.github/workflows/: build.yml
electron/: main.ts  preload.ts
public/: 使用说明.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  main.rs
src/components/: Analytics.tsx  BackupManager.tsx  Calculator.tsx  CommandPalette.tsx  CustomTitleBar.tsx  CustomerList.tsx  CustomerManager.tsx  Dashboard.tsx  DataManager.tsx  DesktopDataManager.tsx  IncomeCalculator.tsx  Layout.tsx  Login.tsx  Notebook.tsx  PasswordVerifyDialog.tsx  RecycleBinDialog.tsx  Settings.tsx  TabBar.tsx  TodoList.tsx  TodoListOptimized.tsx  ToolBox.tsx
src/components/ui/: virtual-list.tsx
src/db/: index.ts
src/hooks/: use-toast.ts  useAutoSave.ts  useHotkeys.ts  useSmartReminders.ts  useTauriAutoSave.ts  useWindowControls.ts
src/lib/: dataExport.ts  localDataStore.ts  notificationTemplates.ts
src/store/: index.ts  recycle.ts  tabs.ts
src/types/: electron.d.ts  index.ts  recycle.ts
src/utils/: excel.ts  index.ts  sqlite-api.ts  tauri-api.ts  tauri-db.ts
