[package]
name = "lemonc"
version = "1.0.0"
description = "LemonC办公系统 - 银行信贷办公系统"
authors = ["lemonC <info@lemonc.com>"]
license = "Proprietary"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
zip = { version = "2.0", default-features = false, features = ["deflate"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-drag = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
