[package]
name = "lemonc"
version = "1.0.0"
description = "LemonC办公系统 - 银行信贷办公系统"
authors = ["lemonC <info@lemonc.com>"]
license = "Proprietary"
repository = ""
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
zip = { version = "2.0", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
